syntax="proto3";
package com.yuli.protobuf;
option java_package = "com.yuli.protobuf";
option java_outer_classname = "DataInfo";



message Message{
    enum DataType {
        PersonType = 0;
        DogType = 1;
        CatType = 2;
    }
    DataType data_type = 1;
    oneof dataBody{
        Person person = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Person{
    string name = 1;
    int32 age = 2;
    string address = 3;
}

message Dog{
    string name = 1;
    int32 age = 2;
}
message Cat{
    string name = 1;
    int32 age = 2;
}